--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>tindog</title>
+  <title>iWindle</title>
   <!-- Bootstrap CSS  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="CSS\styles.css">
@@ -24,7 +24,7 @@
       <!--Nav Bar-->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger" >
-      <a class="navbar-brand" href="#"><i class="fas fa-dog"></i> tindog</a>
+      <a class="navbar-brand" href="#"><i class="fas fa-dog"></i> iWindle</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#features">FEATURES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#testimonials">REVIEW</a>
+            <a class="nav-link" href="#testimonials">Our Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#cta">CONTACT US</a>
@@ -48,8 +48,8 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-6">
-        <h1>Meet new and interesting dogs nearby.</h1>
+      <div class="col-5">
+        <h1>An Open door to the personal growth network you need for all your goals</h1>
         <button type="button" class="btn btn-dark btn-lg Download "><i class="fab fa-apple"></i> Apple Store</button>
         <button type="button" class="btn btn-outline-light btn-lg Download"><i class="fab fa-google-play"></i> Google Play</button>
       </div>
@@ -70,17 +70,17 @@
     <div class="col-lg-4 feature-content">
       <i class="fas fa-check-circle icon fa-3x icon"></i>
       <h3 style="color:#696464; font-weight:bold; font-family: 'Montserrat', sans-serif;">Easy to use</h3>
-      <p style="color:#63707e;">So easy to use, even your dog could do it.</p>
+      <p style="color:#63707e;">So easy to use, very interactive.</p>
    </div>
    <div class="col-lg-4 feature-content">
      <i class="fas fa-bullseye icon fa-3x icon"></i>
-     <h3 style="color:#696464; font-weight:bold; font-family: 'Montserrat', sans-serif;">Elite Clientele</h3>
-     <p style="color:#63707e;">We have all the dogs, the greatest dogs.</p>
+     <h3 style="color:#696464; font-weight:bold; font-family: 'Montserrat', sans-serif;">Support & Motivation Network</h3>
+     <p style="color:#0963c2;">We bring the people for a purpose.</p>
    </div>
     <div class="col-lg-4 feature-content">
       <i class="fas fa-donate fa-3x icon"></i>
       <h3 class="GTW">Guaranteed to work</h3>
-      <p style="color:#63707e;">Find the love of your dog's life or your money back.</p>
+      <p style="color:#63707e;">Unlock the access to the professional network you need.</p>
     </div>
   </div>
 
@@ -119,8 +119,8 @@
 
   <section id="pricing">
 
-    <h2 class="pricing-text">A Plan for Every Dog's Needs</h2>
-    <p class="sent1">Simple and affordable price plans for you and your dog.</p>
+    <h2 class="pricing-text">A Plan for you</h2>
+    <p class="sent1">Simple and affordable price plans for you .</p>
 
 
 
@@ -129,10 +129,10 @@
       <div class="col-lg-4 col-md-6">
         <div class="card mb-10 shadow-sm">
            <div class="card-header">
-            <h3>Chihuahua</h3>
+            <h3>Premium User</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2>19.99$</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -145,30 +145,14 @@
       <div class="col-lg-4 col-md-6">
         <div class="card mb-10 shadow-sm">
           <div class="card-header">
-            <h3>Labrador</h3>
+            <h3>Professional User</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2>$29.99 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
             <button type="button" class="btn btn-lg btn-block btn-outline-dark initial-2-cards"><i class="fas fa-sign-in-alt"></i> Sign Up</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="card mb-10 shadow-sm">
-           <div class="card-header">
-            <h3>Mastiff</h3>
-          </div>
-          <div class="card-body">
-            <h2>$99 / mo</h2>
-            <p>Pirority Listing</p>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
-            <p>Unlimited App Usage</p>
-            <button type="button" class="btn btn-lg btn-block btn-outline-dark"><i class="fas fa-sign-in-alt"></i> Sign Up</button>
           </div>
         </div>
       </div>
@@ -184,7 +168,7 @@
 
   <section id="cta">
 
-    <h3 class="end-line">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="end-line">Find Your Growth Network in one Place!</h3>
     <button type="button" class="btn btn-dark btn-lg Download"><i class="fab fa-apple"></i> Apple Store</button>
     <button type="button" class="btn btn-outline-light btn-lg Download"><i class="fab fa-google-play"></i> Google Play</button>
 
@@ -199,7 +183,7 @@
     <i class="fab fa-facebook-f fa-4px"></i>
     <i class="fab fa-instagram fa-4px"></i>
     <i class="fas fa-envelope fa-4px"></i>
-    <p class="foot">© Copyright 2018 TinDog</p>
+    <p class="foot">© Copyright 2023 iWindle</p>
   </footer>
 
 
